# test

./: pyproject.toml
db/: Conceitual_1.brM3  Lógico_1.brM3
src/: main.py
src/model/: config.py  db.py
src/todolist/: CHANGELOG  README.rst  pyproject.toml
src/todolist/src/todolist/: app.py
src/view/: home.py  p2.py  tarefa_view.py
todolist/: LICENSE  pyproject.toml
todolist/src/todolist/: __main__.py  app.py
