[build-system]
requires = ["setuptools>=42", "briefcase"]
build-backend = "setuptools.build_meta"

[tool.briefcase]
package = "com.william.todolist"  # Nome correto do package
version = "0.1.0"
license = { file = "LICENSE" }

[tool.briefcase.app]
title = "ToDoList"
source = "src"  # Caminho correto para a pasta de código-fonte

[tool.briefcase.dependencies]
dotenv="0.9.9"
flet="0.27.6"
PyMySQL="1.1.1"
SQLAlchemy="2.0.39"